--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             </a>
             <a class="clickmenu clickmenu__pap" href="papilles.html">
                 <h2 class="clickmenu__pap--h2">Le délice des papilles</h2>
-                <p>Menu</p>
+                <p class="clickmenu__pap--h2">Menu</p>
             </a>
             <a class="clickmenu clickmenu__plt" href="palette.html">
                 <h2 class="clickmenu__plt--h2">la palette du goût</h2>
-                <p>Menu</p>
+                <p class="clickmenu__plt--h2">Menu</p>
             </a>
         </nav>
         <nav id="buttonMenu">
