maj origin supension

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </a>
         </nav>
         <nav id="buttonMenu">
-            <a class="aProch"><div id="suspanim">Prochainement</div> </a>
+            <a class="aProch">Prochainement </a>
         </nav>
 
     </main>
